force-app/main/default/objects/Nstudent__c/Nstudent__c.object-meta.xml
<CustomObject>
    <label>Nstudent</label>
    <nameField>
        <label>Nstudent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nstudents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>