force-app/main/default/objects/Nstudent__c/fields/exeid__c.field-meta.xml
<CustomField>
    <fullName>exeid__c</fullName>
    <externalId>true</externalId>
    <label>exeid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>