force-app/main/default/objects/Nstudent__c/fields/External_object__c.field-meta.xml
<CustomField>
    <fullName>External_object__c</fullName>
    <label>External object</label>
    <length>50</length>
    <referenceTo>External_object__x</referenceTo>
    <relationshipLabel>Nstudents</relationshipLabel>
    <relationshipName>Nstudents</relationshipName>
    <type>ExternalLookup</type>
</CustomField>