force-app/main/default/objects/Nstudent__c/fields/Ncontact__c.field-meta.xml
<CustomField>
    <fullName>Ncontact__c</fullName>
    <label>Ncontact</label>
    <type>Phone</type>
</CustomField>