force-app/main/default/objects/Nstudent__c/fields/Nroll__c.field-meta.xml
<CustomField>
    <fullName>Nroll__c</fullName>
    <displayFormat>{000}</displayFormat>
    <externalId>true</externalId>
    <label>Nroll</label>
    <type>AutoNumber</type>
</CustomField>