force-app/main/default/objects/Nstudent__c/fields/Nstandard__c.field-meta.xml
<CustomField>
    <fullName>Nstandard__c</fullName>
    <label>Nstandard</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>